# BMP-Encrypt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bmp.c  bmp.h  cmake_install.cmake  encryption.c  encryption.h  input.c  input.h  main.c  rle.c  rle.h  tested.md  untitled
.run/: Auto Run Tests.run.xml  Interactively Run Tests.run.xml  untitled (interactive).run.xml  untitled (strict verify).run.xml  untitled.run.xml
datatypes/: bool.h  result.h
src/: bmp.c  bmp.h  cmd.c  cmd.h  encryption.c  encryption.h  input-new.c  input.c  input.h  int.c  int.h  main.c  main.h  rle.c  rle.h
src/datatypes/: bool.h  directory_tree.c  directory_tree.h  option.h  result.h  short_sizes.h
src/util/: realloc.c  realloc.h
test/: 1bpp-320x240.bmpb  8bpp-320x240.bmpc  callgrind.sh  test.py  time.sh
test/valid/: nofileextensione
test/valid-examples/: test16bf555.bmpe
